--- a/media/css/default.css
+++ b/media/css/default.css
@@ -1,18 +1,20 @@
 .mod_teamspeak3_viewer {
-
+    overflow: auto;
 }
 
 .mod_teamspeak3_viewer table {
 }
 
 .mod_teamspeak3_viewer table td {
-    white-space: nowrap;
 }
 
 .mod_teamspeak3_viewer table .prefix {
 }
 
 .mod_teamspeak3_viewer table .corpus {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .mod_teamspeak3_viewer table .suffix {
