new: nickname request on join if jquery lib available enh: tooltip layout

--- a/media/css/viewer.css
+++ b/media/css/viewer.css
@@ -20,3 +20,15 @@
 .mod_teamspeak3 table .suffix {
     text-align: right;
 }
+
+.mod_teamspeak3.tip-wrap {
+    max-width: none;
+}
+
+.mod_teamspeak3.tip-wrap .tip-title {
+    white-space: nowrap;
+}
+
+.mod_teamspeak3.tip-wrap .avatar {
+    max-width: 100%;
+}
