--- a/media/css/viewer.css
+++ b/media/css/viewer.css
@@ -2,6 +2,10 @@
     overflow: auto;
 }
 
+.mod_teamspeak3 .nickname {
+    display: none;
+}
+
 .mod_teamspeak3 table .corpus {
     overflow: hidden;
     white-space: nowrap;
